--- a/flaskContainer/.dockerignore
+++ b/flaskContainer/.dockerignore
@@ -1,4 +1,4 @@
-# IGNORA AL AÑADIR LA CARPETA APP A L CONTAINER TODO DIRECTORIO CON LOS SIGUIENTES NOMBRES:
+# IGNORA  TODO DIRECTORIO CON LOS SIGUIENTES NOMBRES:
 env/
 __pychache__/
-# 
+# ANTES DE CONSTRUIR EL CONTENEDOR 
