Configuracion par uwsgi

--- a/flask/app.ini
+++ b/flask/app.ini
@@ -1,11 +1,9 @@
 # CONFIGURACION UWSGI MICROSERVICE
-[uwsgi]
-wsgi-file = run.py
-callable = app
-socket = :8080
-processes = 4
-threads =  2
-master = true
-chmod-socket = 660
-vacuum = true
-die-on-term = true
+[uwsgi] # CALLABLE DE LA APLICACION CONTIENE LOS ITEMS DE CONFIGURACION
+wsgi-file = run.py # ESTABLECEMOS EL ARCHIVO ENTRYPOINT DE USWGI
+master = true # ESTABLECEMOS UN PROCESO MASTER DE EJECUCION
+processes = 5 # Y UN NUMERO DE INSTANCIAS PARTIENDO DE ESE PROCESO MASTER
+socket = app.sock # CREACION DE UN SOCKET UNIX EN LUGAR DE UN WEB CON PUERTO Y LOCALHOST EXPUESTO
+chmod-socket = 660 # PERMISOS DE ESCRITURA PARA NGINX 
+vacuum = true # BORRA EL SOCKET CUANDO  EL PROCESO SE DETIENE 
+die-on-term = true # CERRAR LA TERMINAL DE EJECUCION Y HACER BOOT DE LA APLICACION, EN LUGAR DE VOLVER A CARGAR APP
